--- a/.github/workflows/ios-cicd.yml
+++ b/.github/workflows/ios-cicd.yml
@@ -120,6 +120,7 @@ jobs:
             target.build_configurations.each do |config|
               config.build_settings['CODE_SIGN_STYLE'] = 'Automatic'
               config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '14.0'
+              config.build_settings['CODE_SIGN_ENTITLEMENTS'] = 'Runner/Runner.entitlements'
               config.build_settings.delete('PROVISIONING_PROFILE_SPECIFIER')
               config.build_settings.delete('PROVISIONING_PROFILE')
               config.build_settings.delete('CODE_SIGN_IDENTITY')
